Sat Feb  8 12:41:52 CET 2014
Here's the first batch of packages for MLES 14.1 64-bit. This is an LTS
release, which means packages will be maintained for as long as the underlying
Slackware system is officially supported.

So far, MLES 14.1 64-bit provides the following extra software:

AP
|-- p7zip
|-- pwgen
|-- recode
|-- sbopkg
`-- unrar

D
|-- perl-BerkeleyDB
|-- perl-digest-hmac
|-- perl-digest-sha1
|-- perl-IO-Multiplex
|-- perl-net-dns
|-- perl-net-ip
`-- perl-Net-Server

L
|-- libmpdclient
|-- libsigc++
`-- libtorrent

MULTIMEDIA
|-- faac
|-- faad2
|-- ffmpeg
|-- lame
|-- libcuefile
|-- libmms
|-- libmp4v2
|-- libreplaygain
|-- libshout
|-- musepack-tools
|-- speex
`-- twolame

N
|-- dovecot
|-- postfix
|-- postgrey
|-- rtorrent
|-- squid
`-- squidGuard

PROFILE
`-- user-settings-console

Have fun,

Niki Kovacs <info@microlinux.fr>
+---------------------------+