@@ -1,0 +1,12 @@
+      |-----handy-ruler------------------------------------------------------|
+psutil: psutil (python interface for process and system info)
+psutil:
+psutil: psutil is a module providing an interface for retrieving information
+psutil: on all running processes and system utilization (CPU, memory, disks,
+psutil: network, users) in a portable way by using Python, implementing many
+psutil: functionalities offered by command line tools such as: ps, top, df,
+psutil: kill, free, lsof, netstat, ifconfig, nice, ionice, iostat, iotop,
+psutil: uptime, pidof, tty, who, taskset, and pmap
+psutil:
+psutil: 
+psutil: Package created by Niki Kovacs <info@microlinux.fr>
